--- a/create_cerw.html
+++ b/create_cerw.html
@@ -63,6 +63,9 @@
             display: block;
             color:#FF1744;
         }
+        form button{
+            cursor: pointer;
+        }
 
     </style>
 </head>
@@ -102,7 +105,7 @@
         <div class="step_progressbar"></div>
     </div>
 </div><!--//header end-->
-<div id="container" class="step1"><!--container start-->
+<div id="container" class="step4"><!--container start-->
     <form method="post">
         <fieldset>
             <div class="step_box">
@@ -510,8 +513,12 @@
                             <h2>크루장님이 원하시는 크루 가입조건을 설정해주세요</h2>
                             <div class="add_multiple_choice_question"><h2><a href=""><i class="far fa-plus-square"></i> 객관식 질문 추가</a></h2></div>
                             <dl class="add_multiple_choice_question_list"></dl>
+
+
                             <div class="add_subjective_question"><h2><a href=""><i class="far fa-plus-square"></i> 단답형 질문 추가</a></h2></div>
                             <dl class="add_subjective_question_list"></dl>
+
+
                             <div class="add_file_attachment_question"><h2><a href=""><i class="far fa-plus-square"></i> 파일 첨부 질문 추가</a></h2></div>
                             <dl class="add_file_attachment_question_list"></dl>
                         </div><!--//content_qualification_write_box end-->
@@ -537,11 +544,10 @@
                             </dl>
                         </div><!--// content_description_box end-->
                     </div><!--//qualification_write_box end-->
-
                     <div class="crew_create_btn_box">
                         <button type="button" class="prev_btn"><a>이전</a></button>
                         <button type="submit" class="next_btn next_btn_step4">제출</button>
-                    </div>
+                    </div><!--crew_create_btn_box end-->
                 </div><!--//inner end-->
             </div><!--//step4 end-->
        </fieldset>
@@ -618,27 +624,38 @@
     const $addFileAttachmentQuestion = $('.add_file_attachment_question');
 
     let question=0;
+    const $addMultipleChoiceQuestionList = $('.add_multiple_choice_question_list');
+
     $addMultipleChoiceQuestion.click(function (e) {
         e.preventDefault();
-        console.log("addMultiplcChoiceQuestion click");
-        _.each(json,function(music,idx){
-            const $dl = $('<dl>');
-            const $dt = $('<dt>');
-            const $label = $('<label>');
-            const $input = $('<input>');
+        const dt = $("<dt>" +
+            "<label for=\"\"></label>"+
+            "<input placeholder='질문명을 입력해 주세요'/>" +
+            "</dt>");
 
-        });
-
+        const dd = $("<dl>" +
+            "<label class=\"screen_out\" for=\"\">세부사항</label>"+
+            "<input placeholder='보기를 적어주세요'/>"+
+            "</dl>");
+        $addMultipleChoiceQuestionList.append(dt,dd);
+        $addMultipleChoiceQuestionList.append(dd,dd);
     });
 
-    $addSubjectiveQuestion.click(function () {
+    const $addFileAttachmentQuestionList = $('.add_file_attachment_question_list');
+    const $addSubjectiveQuestionList = $('.add_subjective_question_list');
+    $addSubjectiveQuestion.click(function (e) {
        e.preventDefault();
        const dt = $("<dt>" +
            "<label for=\"\"></label>"+
            "<input placeholder='질문명을 입력해 주세요'/>" +
            "</dt>");
 
-       const dl = $("<dl></dl>");
+       const dd = $("<dl>" +
+           "<label class=\"screen_out\" for=\"\">세부사항</label>"+
+           "<input placeholder='세부사항을 적어주세요'/>"+
+           "</dl>");
+
+        $addSubjectiveQuestionList.append(dt,dd);
     });
     /*step4 end*/
 </script>
